# ai-assignment

./: .gitignore  Dockerfile  Makefile  README.md  analyze_results.py  docker-compose.yml  env.example  pyproject.toml  pyrightconfig.json  ruff.toml  run_category_aware_evaluation.sh  run_expansion.sh  run_tuning.sh
data/: dev.csv  train.csv  train_extended.csv
evaluation_results/: category_aware_dev_20251017_210705.json  category_aware_dev_20251017_210705_summary.txt  category_aware_dev_20251017_233704.json  category_aware_dev_20251017_233704_summary.txt  category_aware_dev_20251017_234515.json  category_aware_dev_20251017_234515_summary.txt  category_aware_dev_20251017_234851.json  category_aware_dev_20251017_234851_summary.txt  exp_027_topk5_bm25_50_detailed.json  exp_027_topk5_bm25_50_summary.txt  tuning_progress_20251017_185454.txt  tuning_progress_20251017_201410.txt
scripts/: setup.sh
src/: __init__.py
src/agent/: __init__.py  prompts.py  rag_agent.py  retriever.py
src/api/: __init__.py  main.py  schemas.py
src/evaluation/: evaluate.py  evaluate_category_aware.py  tune_hyperparams.py
src/preprocessing/: __init__.py  compare_expansion.py  expand_data.py  generate_embeddings.py  process_data.py  test_expansion.py  verify_expansion.py
